# yolox-executorch-ios

./: .gitignore  .gitmodules  README.md
engine/: Cargo.toml  build.rs  rust-toolchain.toml
engine/examples/: yolox.rs
engine/models/: yolox_nano_coreml.pte
engine/src/: c_interface.rs  lib.rs  yolox.rs
ios/app/ET-YOLOX/ET-YOLOX/: ContentView.swift  ET_YOLOXApp.swift
ios/app/ET-YOLOX/ET-YOLOX.xcodeproj/: project.pbxproj
ios/app/ET-YOLOX/ET-YOLOX/Extensions/: CGSize.swift  CVPixelBuffer.swift  Data.swift
ios/app/ET-YOLOX/ET-YOLOX/Views/: ViewController.swift  YoloxView.swift  YoloxViewController.swift
ios/app/ET-YOLOX/ET-YOLOX/Yolox/: Yolox.swift
ios/app/ET-YOLOX/ET-YOLOXTests/: ET_YOLOXTests.swift
ios/app/ET-YOLOX/ET-YOLOXUITests/: ET_YOLOXUITests.swift  ET_YOLOXUITestsLaunchTests.swift
ios/swift-pkg/Engine/: Package.swift
ios/swift-pkg/Engine/Sources/: Engine.swift
ios/swift-pkg/frameworks/base/: Info.plist
ios/swift-pkg/frameworks/base/Headers/: CEngine.h  c_interface.h
ios/swift-pkg/frameworks/base/Modules/: module.modulemap
models/: yolox_nano_xnnpack.pte
scripts/: build-pkg.sh  setup-engine.sh
